--- a/templates/safe-workplace-register.html
+++ b/templates/safe-workplace-register.html
@@ -63,10 +63,10 @@
                             <div class="info-cell span-{{ span }}">
                                 <label>{{ col.column_name }}</label>
                                 {% if col.column_key == 'safeplace_no' %}
-                                    <input type="text" value="{{ safeplace_no }}" readonly style="background-color: #f3f4f6;">
+                                    <input type="text" value="{{ safeplace_no }}" readonly class="readonly-highlight">
                                     <input type="hidden" name="safeplace_no" value="{{ safeplace_no }}">
                                 {% elif col.column_key == 'created_at' %}
-                                    <input type="text" value="{{ created_at }}" readonly style="background-color: #f3f4f6;">
+                                    <input type="text" value="{{ created_at }}" readonly class="readonly-highlight">
                                 {% elif col.column_type == 'dropdown' %}
                                     <select id="{{ col.column_key }}"
                                             class="{{ section.section_key|replace('_', '-') }}-input"
@@ -220,7 +220,7 @@ const submitSafeWorkplace = BoardDetail.createUpdater({
 
 window.submitSafeWorkplace = submitSafeWorkplace;
 
-/script>
+</script>
 
 {{ attachment_scripts() }}
 {% endblock %}
